<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <plurals name="Nsongs">
        <item quantity="one">1 song</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nalbums">
        
        <item quantity="one">1 album</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> albums</item>
    </plurals>
    <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="delete_item">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="play_all_now">Play all now</string>
    <string name="play_all_next">Play all next</string>
    <string name="queue_all">Queue all last</string>
    <string name="interleave_all">Interleave</string>
    <string name="interleaveNNN">List-Queue <xliff:g id="queue">%d</xliff:g>:<xliff:g id="list">%d</xliff:g></string>
    <string name="shufflequeue">Shuffle queue</string>
    <string name="shuffleplaylist">Shuffle list</string>
    <string name="uniqueifyqueue">Remove dups from queue</string>
    <string name="uniqueifyplaylist">Remove dups from list</string>
    <string name="repeat">Repeat</string>
    <string name="rescan">Rescan music</string>
    <string name="rescan_now">Rescan music now</string>
    <string name="delete_song_title">Delete song?</string>
    <string name="delete_playlist_title">Delete playlist?</string>
    <string name="delete_songs_title">Delete songs?</string>
    <string name="delete_artist_desc">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted.</string>
    <string name="delete_genre_desc">All <xliff:g id="artist">%s</xliff:g> songs will be permanently deleted.</string>
    <string name="delete_folder_desc">All songs in <xliff:g id="folder">%s</xliff:g> will be permanently deleted.</string>
    <string name="delete_album_desc">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted.</string>
    <string name="delete_category_desc">All songs in \"<xliff:g id="category">%s</xliff:g>\" will be permanently deleted.</string>
    <string name="delete_song_desc">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted.</string>
    <string name="delete_playlist_desc">\"<xliff:g id="playlist">%s</xliff:g>\" will be deleted.</string>
    <string name="delete_confirm_button_text">Delete</string>
    <plurals name="NNNtracksdeleted">
        
        <item quantity="one">1 song was deleted</item>
        
        <item quantity="other"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted</item>
    </plurals>
    <string name="albums_menu">Albums</string>
    <string name="genres_menu">Genres</string>
    <string name="folders_menu">Folders</string>
    <string name="tracks_title">Songs</string>
    <string name="playlists_menu">"Playlists "</string>
    <string name="artists_menu">Artists</string>
    <string name="info">Info</string>
    <string name="search_title">Search</string>
    <string name="search_for">Search for</string>
    <string name="create_new_playlist">Create playlist</string>
    <string name="playlist_already_exists">Playlist already exists</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="export_playlist_menu">Export</string>
    <string name="playlist_deleted_message">Playlist deleted</string>
    <string name="playlist_renamed_message">Playlist renamed</string>
    <string name="all_songs">All songs</string>
    <string name="all_songs_title">All songs</string>
    <string name="recentlyadded">Recently added</string>
    <string name="recentlyadded_title">Recently added</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_genre_name">Unknown genre</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="unknown_playlist_name">Unknown playlist</string>
    <string name="repeat_off_notif">Repeat is off</string>
    <string name="repeat_current_notif">Repeating current song</string>
    <string name="repeat_stopafter_notif">Stop after current song</string>
    <string name="repeat_all_notif">Repeating all songs</string>
    <string name="share_via">Share via</string>
    <string name="zoom_queue">Zoom queue</string>
    <string name="play_now">Play now</string>
    <string name="play_next">Play next</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_all_to_playlist">Add all to playlist</string>
    <string name="queue">Queue last</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">New playlist <xliff:g id="number">%d</xliff:g></string>
    <string name="will_play_next">Will play next</string>
    <plurals name="NNNtrackstoplaylist">
        
        <item quantity="one">1 song added to playlist</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to playlist</item>
    </plurals>
    <plurals name="NNNtrackstoplayqueue">
        
        <item quantity="one">1 song added to queue</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to queue</item>
    </plurals>
    <string name="emptyplaylist">Selected playlist is empty</string>
    <string name="create_playlist_create_text">Save</string>
    <string-array name="weeklist">
        <item>"1 week"</item>
        <item>"2 weeks"</item>
        <item>"3 weeks"</item>
        <item>"4 weeks"</item>
        <item>"5 weeks"</item>
        <item>"6 weeks"</item>
        <item>"7 weeks"</item>
        <item>"8 weeks"</item>
        <item>"9 weeks"</item>
        <item>"10 weeks"</item>
        <item>"11 weeks"</item>
        <item>"12 weeks"</item>
    </string-array>
    <string name="weekpicker_title">Set time</string>
    <string name="playqueue">View play queue</string>
    <string name="clear_queue">Clear queue</string>
    <string name="applabel">DJD Player</string>
    <string name="appdescription">Music player and organizer app, adapted for the needs of DJs playing music at parties and dancing events.</string>
    <string name="musicshortcutlabel">Music playlist</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="mediasearch">Search for <xliff:g id="term" example="Beethoven">%s</xliff:g> using:</string>
    <string name="search_settings_description">Artists, albums, and tracks</string>
    <string name="search_hint">Search music</string>
    <string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="widget_initial_text">Touch to select music</string>
    <string name="effectspanel">Sound effects</string>
    <string name="create_playlist_create_text_prompt">Playlist name</string>
    <string name="rename_playlist_prompt">Rename \"<xliff:g id="PLAYLIST">%s</xliff:g>\" to</string>
    <string name="behaviour">Behaviour</string>
    <string name="clickonsong">When click on song</string>
    <string name="settings">Settings</string>
    <string name="tabs">Show tabs</string>
    <string name="show_artists_tab">Artists</string>
    <string name="show_albums_tab">Albums</string>
    <string name="show_genres_tab">Genres</string>
    <string name="show_folders_tab">Folders</string>
    <string name="show_playlists_tab">Playlists</string>
    <string name="music_folder">Music folder</string>
    <string name="select_music_folder">Select music folder</string>
    <string name="pick_music_folder">Use as music folder</string>
    <string name="fade">Fading</string>
    <string name="fade_seconds">Fade time</string>
    <string name="cross_fade">Cross fade</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="composer">Composer</string>
    <string name="genre">Genre</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="duration">Duration</string>
    <string name="folder">Folder</string>
    <string name="filename">Filename</string>
    <string name="filesize">Size</string>
    <string name="mimetype">Mime Type</string>
    <string name="id">ID</string>
    <string name="date_added">Added</string>
    <string name="playlist_imported">Playlist imported</string>
    <string name="unable_to_import_playlist">Unable to import playlist</string>
    <string name="playlist_exported">Playlist exported as <xliff:g id="file">%s</xliff:g></string>
    <string name="playlist_shuffled">Playlist shuffled</string>
    <string name="pause">Pause</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="playing">playing</string>
    <string name="crossfading">Cross fading</string>
    <string name="search_results">Search results: \"<xliff:g id="SEARCH">%s</xliff:g>\"</string>
    <string name="context_menu">Context menu</string>
    <string name="streaming">Streaming</string>
    <string name="error_fetching_music">Error fetching music</string>
    <string name="report_error">Report error</string>
    <string name="about">About</string>
    <string name="by">by Mikael Ståldal</string>
    <string name="version">"version "</string>
    <string name="versionName">2.11beta2</string>
</resources>