<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project
     Copyright (C) 2013 Mikael Ståldal

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/album_appwidget"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:clickable="true"
              android:focusable="true"
              android:background="@drawable/appwidget_background">

    <ImageView
            android:src="@drawable/app_icon"
            android:contentDescription="@string/applabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dip">

        <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:singleLine="true"
                android:ellipsize="end"
                />

        <TextView
                android:id="@+id/artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                android:ellipsize="end"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_media_previous"
                    android:contentDescription="@string/prev"
                    android:padding="2dip"
                    android:background="@drawable/appwidget_button_center"/>

            <ImageView
                    android:src="@drawable/spacing"
                    android:layout_width="16dip"
                    android:layout_height="match_parent"/>

            <ImageButton
                    android:id="@+id/pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_media_play"
                    android:contentDescription="@string/play_pause"
                    android:padding="2dip"
                    android:background="@drawable/appwidget_button_center"/>

            <ImageView
                    android:src="@drawable/spacing"
                    android:layout_width="16dip"
                    android:layout_height="match_parent"/>

            <ImageButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_media_next"
                    android:contentDescription="@string/next"
                    android:padding="2dip"
                    android:background="@drawable/appwidget_button_center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>