<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project
     Copyright (C) 2012-2013 Mikael Ståldal

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

    <LinearLayout
            android:id="@+id/playback_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dip"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:orientation="vertical">

        <TextView
                android:id="@+id/trackname"
                android:textSize="18sp"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mp_song_playback"
                android:drawablePadding="4dip"/>

        <TextView
                android:id="@+id/artistname"
                android:textSize="14sp"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mp_artist_playback"
                android:drawablePadding="4dip"/>

        <TextView
                android:id="@+id/genrename"
                android:textSize="14sp"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mp_genre_playback"
                android:drawablePadding="4dip"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#ffffffff"
                android:paddingTop="2dip"
                android:paddingBottom="2dip"/>

    </LinearLayout>

    <fragment
            android:id="@+id/playqueue"
            android:name="nu.staldal.djdplayer.PlayQueueFragment"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dip"/>

    <LinearLayout
        android:id="@+id/playback_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#ffffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff5a5a5a"
            android:orientation="horizontal">

            <TextView android:id="@+id/currenttime"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp"
                android:textStyle="bold"
                android:shadowColor="#ff000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="3"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:paddingLeft="5dip"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:layout_marginTop="1dip"
                android:layout_marginBottom="2dip"
                android:gravity="center">

                <nu.staldal.ui.RepeatingImageButton
                        android:id="@+id/prev"
                        style="@android:style/MediaButton.Previous"
                        android:contentDescription="@string/prev"
                        android:background="@drawable/button_background"/>

                <ImageButton
                        android:id="@+id/pause"
                        style="@android:style/MediaButton.Play"
                        android:contentDescription="@string/play_pause"
                        android:background="@drawable/button_background"/>

                <nu.staldal.ui.RepeatingImageButton
                        android:id="@+id/next"
                        style="@android:style/MediaButton.Next"
                        android:contentDescription="@string/next"
                        android:background="@drawable/button_background"/>

            </LinearLayout>

            <TextView android:id="@+id/totaltime"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp"
                android:textStyle="bold"
                android:shadowColor="#ff000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="3"
                android:gravity="right"
                android:paddingRight="5dip"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <SeekBar android:id="@android:id/progress"
            android:background="#ff5a5a5a"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:paddingBottom="2dip" />

    </LinearLayout>

</LinearLayout>
